@startuml

title __HANGMAN's Class Diagram__\n

  namespace com.hangman {
    class com.hangman.DemoBox2D {
        + body : Body
        + world : World
        + DemoBox2D()
        {static} + main()
    }
  }
  

  namespace com.hangman {
    class com.hangman.GUI {
        ~ root : Group
        {static} + main()
        + start()
    }
  }
  

  namespace com.hangman {
    class com.hangman.Game {
        ~ numberOfRiddles : int
        ~ riddles : ArrayList<Riddle>
        + Game()
        ~ display()
    }
  }
  

  namespace com.hangman {
    class com.hangman.GraphicalRiddle {
        + GraphicalRiddle()
        + toString()
    }
  }
  

  namespace com.hangman {
    class com.hangman.Launcher {
        {static} + main()
    }
  }
  

  namespace com.hangman {
    class com.hangman.PhysicalEngine {
        + body : Body
        + world : World
        + PhysicalEngine()
        + getUFOXPosition()
        + getUFOYPosition()
        + impulseOnUFO()
        + update()
    }
  }
  

  namespace com.hangman {
    class com.hangman.RenderEngine {
        ~ collision : boolean
        ~ destroyed : boolean
        ~ earthView : ImageView
        ~ explosion : Image[]
        ~ old_collision : boolean
        ~ root : Group
        ~ rx : Rotate
        ~ sunPane : Pane
        ~ sunView : ImageView
        ~ ufo : Image[]
        ~ ufoView : ImageView
        + RenderEngine()
        + getSunPane()
        ~ render()
    }
  }
  

  namespace com.hangman {
    class com.hangman.Riddle {
        # answer : String
        - displayedString : StringBuilder
        - maxNumberOfFail : int
        - numberOfFails : int
        - triedLetters : ArrayList<String>
        + Riddle()
        + guess()
        + toString()
    }
  }
  

  namespace com.hangman {
    class com.hangman.YetAnotherTestPolymophism {
        {static} + main()
    }
  }
  

  namespace com.hangman {
    class com.hangman.testRiddle {
        {static} + main()
    }
  }
  

  com.hangman.GUI -up-|> javafx.application.Application
  com.hangman.GUI o-- com.hangman.PhysicalEngine : physicalEngine
  com.hangman.GUI o-- com.hangman.RenderEngine : renderEngine
  com.hangman.GraphicalRiddle -up-|> com.hangman.Riddle
  com.hangman.RenderEngine o-- com.hangman.PhysicalEngine : physicalEngine


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
